; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_intel_telemetry_core.c_telemetry_set_pltdata.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_intel_telemetry_core.c_telemetry_set_pltdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.telemetry_plt_config*, %struct.telemetry_core_ops* }
%struct.telemetry_plt_config = type { i32 }
%struct.telemetry_core_ops = type { i32 }

@telm_core_conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @telemetry_set_pltdata(%struct.telemetry_core_ops* %0, %struct.telemetry_plt_config* %1) #0 {
  %3 = alloca %struct.telemetry_core_ops*, align 8
  %4 = alloca %struct.telemetry_plt_config*, align 8
  store %struct.telemetry_core_ops* %0, %struct.telemetry_core_ops** %3, align 8
  store %struct.telemetry_plt_config* %1, %struct.telemetry_plt_config** %4, align 8
  %5 = load %struct.telemetry_core_ops*, %struct.telemetry_core_ops** %3, align 8
  %6 = icmp ne %struct.telemetry_core_ops* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load %struct.telemetry_core_ops*, %struct.telemetry_core_ops** %3, align 8
  store %struct.telemetry_core_ops* %8, %struct.telemetry_core_ops** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telm_core_conf, i32 0, i32 1), align 8
  br label %9

9:                                                ; preds = %7, %2
  %10 = load %struct.telemetry_plt_config*, %struct.telemetry_plt_config** %4, align 8
  %11 = icmp ne %struct.telemetry_plt_config* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load %struct.telemetry_plt_config*, %struct.telemetry_plt_config** %4, align 8
  store %struct.telemetry_plt_config* %13, %struct.telemetry_plt_config** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telm_core_conf, i32 0, i32 0), align 8
  br label %14

14:                                               ; preds = %12, %9
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
